# PPGA_Padalin

./: CMakeLists.txt  FlyFish.h  FlyStructs.cpp  FlyStructs.h  FlyUtils.cpp  FlyUtils.h  GA_Calculations.docx  Game.cpp  Game.h  Globals.cpp  Globals.h  LICENSE  README.md  main.cpp  structs.h  utils.cpp  utils.h
src/: Bullet.cpp  Bullet.h  Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  EnemySpawner.cpp  EnemySpawner.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  InputManager.cpp  InputManager.h  MovingEnemy.cpp  MovingEnemy.h  Object.cpp  Object.h  PickUp.cpp  PickUp.h  PickUpPower.cpp  PickUpPower.h  Pillar.cpp  Pillar.h  Player.cpp  Player.h  ShootingEnemy.cpp  ShootingEnemy.h  ShootingEntity.cpp  ShootingEntity.h  Sprite.cpp  Sprite.h
